VUZE CHANGELOG
-----------------


2008.0x.xx | Vuze 3.1.0.1

BUGFIX: Core  | Fixed bug which prevented torrent files from being moved properly [amc1] 

2008.06.16 | Vuze 3.1.0.0

FEATURE: UI   | Protocol overhead is now shown in the speed graph [The 8472]
FEATURE: UI   | Downloads can now be moved and renamed while running - torrent will be auto-paused [amc1]
FEATURE: UI   | New "rename" action which renames torrent file, save file and displayed name at same time [amc1]
FEATURE: UI   | Plugin log views now support autoscrolling, pausing and regex filtering [The 8472]
FEATURE: UI   | Plugin menu items which in the right-click menu now appear in the "Torrent" menu also [amc1] 
FEATURE: UIv3 | Friends (sharing, bandwidth boost)
FEATURE: UIv3 | Greatly Improved Search
FEATURE: UIv3 | Experimental option to use Mozilla/Firefox as browser widget on any platform (XulRunner or Firefox 3 must be installed) [The 8472]
FEATURE: Plug | Added support for plugins to easily use an external configuration file for settings [amc1]
FEATURE: Plug | Plugins can now have full control over on-complete and on-removal file moving [amc1]
FEATURE: Plug | Added resource downloader to provide way to download files from Sourceforge [amc1]
FEATURE: Plug | Added API methods to generically pop up the message box to a user [amc1]
FEATURE: Plug | Added API methods to listen to download-complete events [amc1]
FEATURE: Plug | Added various convenience methods for using log views and config models [amc1]
FEATURE: Plug | Added API to allow native UI objects to be added to config views [amc1]
FEATURE: Plug | Added some more methods for plugins to control some transport mechanisms [amc1]
FEATURE: Plug | Added ability to add menus to status entry objects [amc1]
FEATURE: Plug | Plugins can now open files using default application handlers [amc1]
